funcionalidade adicionada: captação de mensagens e tratamento de dados funcionando corretamente

--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
+    "dev": "nodemon index.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
@@ -18,6 +19,11 @@
   },
   "homepage": "https://github.com/theJoseNeto/auto-pull#readme",
   "dependencies": {
+    "axios": "^0.27.2",
+    "dotenv": "^16.0.1",
     "pm2": "^5.2.0"
+  },
+  "devDependencies": {
+    "nodemon": "^2.0.19"
   }
 }
